<resources>
    <string name="app_name">Mobile_App_Bank_Account</string>
    <string name="UserId">Enter your id :</string>
    <string name="ValueUserId">Value Id</string>
    <string name="validate">Validate</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="TitlePage2">Your account\'s informations</string>
    <string name="info">Informations</string>
    <string name="refresh">Refresh</string>
    <string name="offline_mode">Offline Mode</string>

</resources>